major changes in frontend design

--- a/frontend/accounts/signin.html
+++ b/frontend/accounts/signin.html
@@ -18,25 +18,27 @@
     </a>
   </div>
   <div class=" navlabel" ><a href="../index.html">Praise My Guru</a> </div>
-  <div class=" navlabel" ><a href="../colleges/college.html">Colleges</a> </div>
-  <div class=" navlabel" ><a href="../schools/school.html">Schools</a> </div>
-  <div class=" navlabel" ><a href="../praise/praise.html">Praise Here!!</a> </div>
+  <div class=" navlabel" ><a href="../colleges/collegesList.html">Colleges</a> </div>
+  <div class=" navlabel" ><a href="../schools/schoolsList.html">Schools</a> </div>
+  <div class=" navlabel" ><a href="../teachers/teachersList.html">Guru's</a> </div>
   <div class=" navlabel" ><a href="../addTeacher/addTeacher.html">Add your Guru</a> </div>
   <div class=" navlabel"><a href="../aboutus/aboutus.html">About Us</a></div>
   <div class=" navlabel"><a href="#">Register / LogIn</a></div>  
 </section>
-    
 
-<section class="login-page">
-  <div class="form">
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
-      <p class="message">Not registered? <a href="./signup.html">Create an account</a></p>
-    </form>
-  </div>
+<section class="signinsec">
+  <div class="singnindiv">
+    <div class="boxes">
+      <form method="POST"  action="#" class="form">
+        <div ><input type="text" class="tlabel" placeholder="Username"  required></div>
+        <div ><input type="password" class="tlabel" placeholder="Password"  required></div>
+        <div ><input type="submit" class="tlabel" value="submit"></div>
+      </form>
+      <div class="register">Not registered? <a class="link" href="./signup.html"> Create an account</a></div>
+    </div>
+  </div> 
 </section>
+
 
 <section class="footer">
   <h1>2019@Copyright</h1>
