--- a/frontend/schools/school.html
+++ b/frontend/schools/school.html
@@ -19,65 +19,65 @@
     </a>
   </div>
   <div class=" navlabel" ><a href="../index.html">Praise My Guru</a> </div>
-  <div class=" navlabel" ><a href="../colleges/college.html">Colleges</a> </div>
-  <div class=" navlabel" ><a href="#">Schools</a> </div>
-  <div class=" navlabel" ><a href="../praise/praise.html">Praise Here!!</a> </div>
+  <div class=" navlabel" ><a href="../colleges/collegesList.html">Colleges</a> </div>
+  <div class=" navlabel" ><a href="./schoolsList.html">Schools</a> </div>
+  <div class=" navlabel" ><a href="../teachers/teachersList.html">Guru's</a> </div>
   <div class=" navlabel" ><a href="../addTeacher/addTeacher.html">Add your Guru</a> </div>
   <div class=" navlabel"><a href="../aboutus/aboutus.html">About Us</a></div>
-  <div class=" navlabel"><a href="../signin/signin.html">Register / LogIn</a></div>  
+  <div class=" navlabel"><a href="../accounts/signin.html">Register / LogIn</a></div>  
 </section>
 
-<div class="heading">
-  <p>Schools</p>
-</div>
-<section class="colleges">
-  <div class="college">
-    <div class="collegepic">
-      <img class="pic" src="../material/pics/teacher.png">
+<section class="teachersec">
+  <div class="teacherdiv">
+    <div class="boxes">
+      <div class="heading">
+        <p>About Institution</p>
+      </div>
+      <div class="maininfo">
+        <div class="tpic">
+          <img class="pic" src="../material/pics/teacher.png">
+        </div>
+        <div class="tname">
+          <div><h1>aLorem ipsum dolor sit amet</h1></div>
+        </div>
+      </div>
+      <div class="infomations infopic">
+        <div class="info">
+          <div class="label">Institution Type </div><strong>:</strong> <div class="labelans">aaaLorem ipsum dolor sit amet</div>
+        </div>
+        <div class="info">
+          <div class="label">Location </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+        </div>
+        <div class="info">
+          <div class="label">Founded </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+        </div>
+        <div class="info">
+          <div class="label">Website </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+        </div>
+        <div class="info">
+          <div class="label">Moto </div><strong>:</strong> <div class="labelans"></div>
+        </div>
+        <div class="info">
+          <div class="label">Contact Number</div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+        </div>
+        <div class="info">
+          <div class="label">Number of Guru's Registered </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+        </div>
+        <div class="info">
+          <div class="label">Avegerage rating of Guru </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+        </div>
+      </div>
     </div>
-    <div class="collegetext ">
-      <div class="cname textdiv">
-      <span class="lhead">Name :</span>Lorem ipsum
-      </div>
-      <div class="cplace textdiv">
-        <span class="lhead">Place :</span>Lorem ipsum
-      </div>
-      <div class="cplace textdiv">
-        <span class="lhead">Type :</span>Lorem ipsum
-      </div>
-      <div class="cteachers textdiv">
-        <span class="lhead">Teachers :</span>100
-      </div>
-    </div>  
   </div>
+</section>
 
-  <div class="college">
-    <div class="collegepic">
-      <img class="pic" src="../material/pics/teacher.png">
-    </div>
-    <div class="collegetext ">
-      <div class="cname textdiv">
-        Name: Lorem ipsum
-      </div>
-      <div class="cplace textdiv">
-        Place: Lorem ipsum
-      </div>
-      <div class="cplace textdiv">
-        Type: Lorem ipsum
-      </div>
-      <div class="cteachers textdiv">
-        Teachers: 100
-      </div>
-    </div>  
-  </div>
-</section>  
 
 <section class="footer">
   <h1>2019@Copyright</h1>
 </section>
 
+<script src="../material/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
 <script src="../material/jquery.js"></script>
-<script src="../material/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
 <script src="./college.js"></script>
 </body>
 </html>
