--- a/frontend/teachers/praise.html
+++ b/frontend/teachers/praise.html
@@ -12,20 +12,20 @@
 </head>
 <body>
 
-  <section class="navbar">
-    <div class="icondiv ">
-      <a href="../index.html">
-        <img src="../material/pics/mainIcon.png" alt="mainiconguru" class="mainicon navlabel">      
-      </a>
-    </div>
-    <div class=" navlabel" ><a href="../index.html">Praise My Guru</a> </div>
-    <div class=" navlabel" ><a href="../colleges/college.html">Colleges</a> </div>
-    <div class=" navlabel" ><a href="../schools/school.html">Schools</a> </div>
-    <div class=" navlabel" ><a href="../praise/praise.html">Praise Here!!</a> </div>
-    <div class=" navlabel" ><a href="../addTeacher/addTeacher.html">Add your Guru</a> </div>
-    <div class=" navlabel"><a href="../aboutus/aboutus.html">About Us</a></div>
-    <div class=" navlabel"><a href="../signin/signin.html">Register / LogIn</a></div>  
-  </section>
+<section class="navbar">
+  <div class="icondiv ">
+    <a href="../index.html">
+      <img src="../material/pics/mainIcon.png" alt="mainiconguru" class="mainicon navlabel">      
+    </a>
+  </div>
+  <div class=" navlabel" ><a href="../index.html">Praise My Guru</a> </div>
+  <div class=" navlabel" ><a href="../colleges/collegesList.html">Colleges</a> </div>
+  <div class=" navlabel" ><a href="../schools/schoolsList.html">Schools</a> </div>
+  <div class=" navlabel" ><a href="../teachers/teachersList.html">Guru's</a> </div>
+  <div class=" navlabel" ><a href="../addTeacher/addTeacher.html">Add your Guru</a> </div>
+  <div class=" navlabel"><a href="../aboutus/aboutus.html">About Us</a></div>
+  <div class=" navlabel"><a href="../accounts/signin.html">Register / LogIn</a></div>  
+</section>
     
 
 <div class="heading">Praise Your Guru!!</div>
