--- a/frontend/teachers/teacher.html
+++ b/frontend/teachers/teacher.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="./college.css">
+  <link rel="stylesheet" type="text/css" href="./teacher.css">
   <link rel="stylesheet" type="text/css" href="../material/bootstrap-4.3.1-dist/css/bootstrap.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     </a>
   </div>
   <div class=" navlabel" ><a href="../index.html">Praise My Guru</a> </div>
-  <div class=" navlabel" ><a href="./collegesList.html">Colleges</a> </div>
+  <div class=" navlabel" ><a href="../colleges/collegesList.html">Colleges</a> </div>
   <div class=" navlabel" ><a href="../schools/schoolsList.html">Schools</a> </div>
   <div class=" navlabel" ><a href="../teachers/teachersList.html">Guru's</a> </div>
   <div class=" navlabel" ><a href="../addTeacher/addTeacher.html">Add your Guru</a> </div>
@@ -31,40 +31,48 @@
   <div class="teacherdiv">
     <div class="boxes">
       <div class="heading">
-        <p>About Institution</p>
+        <p>About Guru</p>
       </div>
       <div class="maininfo">
         <div class="tpic">
           <img class="pic" src="../material/pics/teacher.png">
         </div>
         <div class="tname">
-          <div><h1>aLorem ipsum dolor sit amet</h1></div>
+          <div><h1>Lorem ipsum dolor sit amet</h1></div>
+          <div><h2>Lorem ipsum dolor sit amet</h2></div><br><br><br>
+          <div><h3>Want to give respect to your Guru?<a class="tnamelink" href="./praise.html">Praise Here!</a></h3></div>
         </div>
       </div>
       <div class="infomations infopic">
         <div class="info">
-          <div class="label">Institution Type </div><strong>:</strong> <div class="labelans">aaaLorem ipsum dolor sit amet</div>
+          <span class="label">Institution Type </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
         </div>
         <div class="info">
-          <div class="label">Location </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+          <span class="label">Subjects </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
         </div>
         <div class="info">
-          <div class="label">Founded </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+          <span class="label">Age </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
         </div>
         <div class="info">
-          <div class="label">Website </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+          <span class="label">Expirence </span><strong>:</strong> <span class="labelans">LoremLorem ipsum dolor sit amet</span>
         </div>
         <div class="info">
-          <div class="label">Moto </div><strong>:</strong> <div class="labelans"></div>
+          <span class="label">Moto </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
         </div>
         <div class="info">
-          <div class="label">Contact Number</div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+          <span class="label">Worth Listening </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
         </div>
         <div class="info">
-          <div class="label">Number of Guru's Registered </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+          <span class="label">Stars </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
         </div>
         <div class="info">
-          <div class="label">Avegerage rating of Guru </div><strong>:</strong> <div class="labelans">Lorem ipsum dolor sit amet</div>
+          <span class="label">Tags </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
+        </div>
+        <div class="info">
+          <span class="label">Suggest Others </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
+        </div>
+        <div class="info">
+          <span class="label">Suggestions </span><strong>:</strong> <span class="labelans">Lorem ipsum dolor sit amet</span>
         </div>
       </div>
     </div>
