--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,9 +19,9 @@
     </a>
   </div>
   <div class=" navlabel" ><a href="#">Praise My Guru</a> </div>
-  <div class=" navlabel" ><a href="./colleges/college.html">Colleges</a> </div>
-  <div class=" navlabel" ><a href="./schools/school.html">Schools</a> </div>
-  <div class=" navlabel" ><a href="./praise/praise.html">Praise Here!!</a> </div>
+  <div class=" navlabel" ><a href="./colleges/collegesList.html">Colleges</a> </div>
+  <div class=" navlabel" ><a href="./schools/schoolsList.html">Schools</a> </div>
+  <div class=" navlabel" ><a href="./teachers/teachersList.html">Guru's</a> </div>
   <div class=" navlabel" ><a href="./addTeacher/addTeacher.html">Add your Guru</a> </div>
   <div class=" navlabel"><a href="./aboutus/aboutus.html">About Us</a></div>
   <div class=" navlabel"><a href="./signin/signin.html">Register / LogIn</a></div>  
@@ -33,7 +33,7 @@
       <p class="searchtext">Search any teacher, College or School!!
       <span class="serchdiv"><img clas="searchIcon" src="./material/pics/searchIcon.png"></span></p>
       <label for="search"></label>
-      <input type="text" name="search" class="searchbox" placeholder="Search for any teacher">
+      <input type="text" name="search" class="searchbox" placeholder="Search Here!!">
       <!-- <input type="submit" name="submit"> -->
     </form>
   </div>
