--- a/backendPMG/mytemplates/home/home.html
+++ b/backendPMG/mytemplates/home/home.html
@@ -5,68 +5,6 @@
 {% block content %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
-<form action="{% url 'home' %}" method="POST"  enctype="multipart/form-data">
-  {% csrf_token %}
-  <input type="text" name='name'>
-  <input type="range" name="range">
-  <button type="submit">submit</button>
-</form>
-  <!-- <div class="teacherdetailsfield"> 
-    <textarea name="text"></textarea> -->
-    <!-- <div class="teacherdetailsfield">
-      <div class="yearradio"><input type="radio" name="expirance" required value="1y"> Around 1 year</div>
-      <div class="yearradio"><input type="radio" name="expirance" required value="2y"> Around 2 year</div>
-      <div class="yearradio"><input type="radio" name="expirance" required value="3y"> Around 3 year</div>
-      <div class="yearradio"><input type="radio" name="expirance" required value="5y"> Around 5 year</div>
-      <div class="yearradio"><input type="radio" name="expirance" required value="8y"> Around 8 year</div>
-      <div class="yearradio"><input type="radio" name="expirance" required value="10y"> Around 10 year</div>
-      <div class="yearradio"><input type="radio" name="expirance" required value="15y"> Around 15 year</div>
-      <div class="yearradio"><input type="radio" name="expirance" required value="15plusy"> more then 15 year</div>
-    </div> -->
-
-
-      <!-- <input type="file" name="img" >  -->
-      <!-- <input type="number" name = "num"> -->
-
-      <!-- <select name="institudename" required>
-          <option value="svit">Sai Vidya Institude Of Technology</option>
-          <option value="reva">Reva</option>
-          <option value="ramaiah">Ramaiah Institute of Technology</option>
-          <option value="presidency">Presidency College</option>
-          <option value="bmsit">BMSIT</option>
-        </select> -->
-
-      <!-- {% for value, text in home.models.providers.field.choices %}
-      <div class="ui slider checkbox">
-        <input id="id_providers_{{ forloop.counter0 }}" name="{{ home.models.SU }}" type="checkbox" value="{{ value }}"{% if value in checked_providers %} checked="checked"{% endif %}>
-        <label>{{ text }}</label>
-      </div>
-    {% endfor %} -->
-
-
-      <!-- <div class="subjectscheckbox"><input type="checkbox" name="subjects" class="sub" value="civil">Civil</div>  
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects" class="sub" value="se">Software Enggineering</div>  
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects" class="sub" value="co">Computer Organization</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects" class="sub" value="algorthiums">Algorithums</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects" class="sub" value="ds">Data Structures</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects" class="sub" value="c">C</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects" class="sub" value="math">Mathematics</div> -->
-      
-      
-      <!-- <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="physics">Physics</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="chemistry">Chemistry</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="mechnical">Mechnical</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="electrical">Electrical</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="electronics">Electronics</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="atc">AT&C</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="advjava">Java</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="cn">Networking</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="management">Management for IT</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="dotnet">Dot Net</div>
-      <div class="subjectscheckbox"><input type="checkbox" name="subjects[]" class="sub" value="dbms">DBMS</div> -->
-    <!-- </div>
-    <input type="submit" name="submit">
-</form> -->
 
 <section class="cover">
   <div class="covertext">
@@ -109,7 +47,7 @@
     <div class="rateboxes">
       <div class="ratebox">
         <div class="ratepic">
-          <img class="topteacherpic" src="{% static 'material/pics/teacher.png' %}">
+          <img class="topteacherpic" src="{% static 'material/pics/cteacher.png' %}">
         </div>
         <div class="ratetext">
           <p class="teachername">Lorem ipsum dolor sit amet</p>
@@ -119,7 +57,7 @@
 
       <div class="ratebox">
         <div class="ratepic">
-          <img class="topteacherpic" src="{% static '/material/pics/teacher.png' %}">
+          <img class="topteacherpic" src="{% static '/material/pics/cteacher.png' %}">
         </div>
         <div class="ratetext">
           <p class="teachername">Lorem ipsum dolor sit amet</p>
@@ -129,7 +67,7 @@
 
       <div class="ratebox">
         <div class="ratepic">
-          <img class="topteacherpic" src="{% static '/material/pics/teacher.png' %}">
+          <img class="topteacherpic" src="{% static '/material/pics/cteacher.png' %}">
         </div>
         <div class="ratetext">
           <p class="teachername">Lorem ipsum dolor sit amet</p>
@@ -149,7 +87,7 @@
     <div class="remarkboxes">
       <div class="remarkbox">
         <div class="remarkpic">
-          <img class="remarkteacherpic" src="{% static '/material/pics/teacher.png' %}">
+          <img class="remarkteacherpic" src="{% static '/material/pics/unavailable.png' %}">
         </div>
         <div class="remarkname">
           <p>Lorem ipsum dolor</p>
@@ -163,7 +101,7 @@
 
       <div class="remarkbox">
           <div class="remarkpic">
-            <img class="remarkteacherpic" src="{% static '/material/pics/teacher.png' %}">
+            <img class="remarkteacherpic" src="{% static '/material/pics/unavailable.png' %}">
           </div>
           <div class="remarkname">
             <p>Lorem ipsum dolor</p>
@@ -186,7 +124,7 @@
         <div class="contactpic">
           <img class="cpic" src="{% static 'material/pics/mainIcon.png' %}">
         <div class="contacttext">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque nec nam aliquam sem et tortor consequat id porta. Eget duis at tellus at urna. Sagittis aliquam malesuada bibendum arcu vitae. Cursus euismod quis viverra nibh cras. In vitae turpis massa sed elementum tempus egestas sed sed. Id ornare arcu odio ut. Vitae et leo duis ut diam quam. Nisl vel pretium lectus quam id leo in vitae turpis. Habitant morbi tristique senectus et netus. Tristique et egestas quis ipsum. Praesent tristique magna sit amet purus gravida quis.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque nec nam aliquam sem et tortor consequat id porta. Eget duis at tellus at urna. Sagittis aliquam malesuada bibendum arcu vitae. Cursus euismod quis viverra nibh cras. In vitae turpis massa sed elementum tempus egestas sed sed. Id ornare arcu odio ut. Vitae et leo duis ut diam quam. Nisl vel pretium lectus quam id leo in vitae turpis. Habitant morbi tristique senectus et netus. Tristique et egestas quis ipsum. Praesent tristique magna sit amet purus gravida quis.
+          <strong>Praise My Guru</strong> is dedicated to our gurs's who spand their entier time thing about betterment of students. So we thought to create a website for our Guru where students can express their feelings towards their Guru's. <br> <br> <strong>How this website is different from other's? </strong> <br> Here we are changing the notion of <strong> "rating" to "prasing"</strong> as guru cant be rated by students who has sacreficed his/her life in building the brightful futher for students. <br> As <strong>Malala Yousafzai </strong> nobel peace winner has rightly said <br><strong>"One child, one teacher, one pen and one book can change the world"</strong><br><br>Thus, we need your support to take out some time and remeber those gurs's which have made your life bettre then yesterday. Kindly, show your gratitute towards them and let others get to know who wonderful are they!! <br> With this I will like to thank's all of my Guru's to make be better human being. 
       </div>
   </div>
 </section>
