--- a/backendPMG/mytemplates/gurus/gurusList.html
+++ b/backendPMG/mytemplates/gurus/gurusList.html
@@ -1,3 +1,4 @@
+
 {% extends 'base.html' %}
 
 {% load static %}
@@ -10,7 +11,7 @@
   <p>Guru's</p>
 </div>
 <section class="colleges">
-
+  
   {% if gurusList %}
     {% for guru in gurusList %}
     <div class="college">
@@ -32,10 +33,10 @@
             <span class="lhead">Overall</span><strong class="colon">:</strong>4.7
           </div>
           <div class="cteachers ">
-            <span class="lhead"><a class="tlink" href="{% url 'guru' 1 %}">Know more about guru</a> </span>
+            <span class="lhead"><a class="tlink" href="{% url 'guru' guru.addteacherID %}">Know more about guru</a> </span>
           </div>
           <div class="cteachers ">
-            <span class="lhead"><a class="tlink" href="{% url 'praiseGuru' 2 %}">Haven't praise? Praise Here!!</a> </span>
+            <span class="lhead"><a class="tlink" href="{% url 'praiseGuru' guru.addteacherID %}">Haven't praise? Praise Here!!</a> </span>
           </div>
         </div>  
       </div>
