working good along with bugs

--- a/backendPMG/mytemplates/add/addSchool.html
+++ b/backendPMG/mytemplates/add/addSchool.html
@@ -10,7 +10,7 @@
   <div class="institutediv">
     <div class="boxes">
       <div class="heading">
-        Add Your College
+        Add Your School
       </div>
       <form class="form" action="{% url 'addSchool' %}" method="POST"   enctype="multipart/form-data">
           {% csrf_token %}
