--- a/backendPMG/mytemplates/add/addTeacher.html
+++ b/backendPMG/mytemplates/add/addTeacher.html
@@ -97,7 +97,7 @@
           <label for="age">Age</label>
         </div>
         <div class="teacherdetailsfield">
-          <input type="number" name="age" min="18" max="80">
+          <input type="number" required name="age" min="18" max="80">
         </div>
       </div>
       <div class="teacherdetails">
@@ -120,7 +120,7 @@
           <label for="imgupload">Uplaod the imgage</label>
         </div>
         <div class="teacherdetailsfield">
-          <input type="file" name="imgupload" >
+          <input type="file" required name="imgupload" >
         </div>
       </div>
       <div class="teacherdetails">
@@ -128,7 +128,7 @@
           <label for="teachermoto">Teacher Moto</label>
         </div>
         <div class="teacherdetailsfield">        
-          <textarea name="teachermoto" placeholder="Guru's best described in one line!!"></textarea>
+          <textarea name="teachermoto" required placeholder="Guru's best described in one line!!"></textarea>
         </div>
       </div>
       <div class="teacherdetails">
