--- a/backendPMG/mytemplates/colleges/collegesList.html
+++ b/backendPMG/mytemplates/colleges/collegesList.html
@@ -16,9 +16,9 @@
       <div class="college">
         <div class="collegepic">
           {% if guru.image %}
-            <img class="pic" src="{% static 'material/pics/teacher.png' %}">
+            <img class="pic" src="{% static 'material/pics/aacollege72091432.jpg' %}">
           {% else %}
-            <img class="pic" src="{% static 'material/pics/teacher.png' %}">
+            <img class="pic" src="{% static 'material/pics/aacollege72091432.jpg' %}">
           {% endif %}
           </div>
         <div class="collegetext ">
