--- a/backendPMG/mytemplates/schools/schoolsList.html
+++ b/backendPMG/mytemplates/schools/schoolsList.html
@@ -15,9 +15,9 @@
       <div class="college">
         <div class="collegepic">
           {% if school.image %}
-            <img class="pic" src="{% static 'material/pics/teacher.png' %}">
+            <img class="pic" src="{% static 'material/pics/aaSCHOOL.jpeg' %}">
           {% else %}
-            <img class="pic" src="{% static 'material/pics/teacher.png' %}">
+            <img class="pic" src="{% static 'material/pics/aaSCHOOL.jpeg' %}">
           {% endif %}
           </div>
         <div class="collegetext ">
